// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Icon Extra Small 1`] = `
.c0 {
  color: inherit;
}

.c0 > svg {
  height: 20px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

<div
  className="c0"
  size="xs"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
        id="a"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Components/Icon Large 1`] = `
.c0 {
  color: inherit;
}

.c0 > svg {
  height: 80px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

<div
  className="c0"
  size="lg"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
        id="a"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Components/Icon Medium 1`] = `
.c0 {
  color: inherit;
}

.c0 > svg {
  height: 50px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

<div
  className="c0"
  size="md"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
        id="a"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Components/Icon Small 1`] = `
.c0 {
  color: inherit;
}

.c0 > svg {
  height: 30px;
  color: inherit;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:767px) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:576) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

@media (max-width:768) {

}

<div
  className="c0"
  size="sm"
>
  <svg
    viewBox="0 0 50 50"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path
        d="M0 0h23.795v23.795H0z"
        id="a"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
        fill="currentColor"
      />
      <g
        transform="translate(13.308 1)"
      >
        <path
          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
          fill="currentColor"
        />
      </g>
    </g>
  </svg>
</div>
`;
